<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/searchPanel"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/loadingTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/loading"
            android:textSize="25sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/noResultsTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_results_or_network_error"
            android:textSize="25sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/searchPanel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/searchPanel"
            android:hint="@string/searchHint"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textColor="@color/searchTextColor"
            android:textColorHint="@color/hintSearchColor"
            android:textSize="23sp" />


        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="fill"
            android:background="@color/searchPanel"
            android:src="@drawable/ic_search_black_24dp"
            android:tint="@color/searchTextColor" />
    </LinearLayout>


</RelativeLayout>