<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/infoPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/backButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/bigAlbumArtworkImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/big_album_artwork"
                android:scaleType="fitCenter"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/mainInfoTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/bigAlbumArtworkImageView">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/albumNameInfoTextView">


                    <TextView
                        android:id="@+id/albumNameInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:lineSpacingMultiplier="0.87"
                        android:padding="5dp"
                        android:textColorLink="@color/searchPanel"
                        android:textSize="25sp" />


                    <TableRow>

                        <TextView
                            android:id="@+id/artistNameInfoTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:gravity="start"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:singleLine="true"
                            android:textColorLink="@color/searchPanel"
                            android:textSize="18sp"
                            app:layout_constraintTop_toBottomOf="@+id/albumNameInfoTextView"
                            tools:text="Artist Name" />

                        <TextView
                            android:id="@+id/genreInfoTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:gravity="end"
                            android:textSize="15sp"
                            tools:text="Hard Rock" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/countryAndRelease"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:alpha="0.7"
                            tools:text="USA  ·  2018" />

                        <TextView
                            android:id="@+id/priceInfoTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:alpha="0.7"
                            android:gravity="end"
                            tools:text="8.05 USD" />
                    </TableRow>

                </TableLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/songsPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentTop="true"
                app:layout_constraintTop_toBottomOf="@+id/mainInfoTable">

                <TextView
                    android:id="@+id/loadingSongsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/loading"
                    android:textSize="25sp"
                    android:visibility="visible" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/songRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:padding="5dp"
                    android:scrollbars="none"
                    android:visibility="gone" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/hintSearchColor"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/songsPlace" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/searchPanel"
        android:text="@string/ButtonBackToAlbums"
        android:textColor="@color/searchTextColor" />


</RelativeLayout>